# prisma-client-py-tortoise-orm

./: .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: CI.yml  publish.yml
prisma/: base.py  schema.prisma
scripts/: build.ts
src/: config.ts  generator.ts  template.ts
src/helpers/: genEnum.ts  genModel.ts
src/utils/: array.ts  index.ts  io.ts  python.ts  string.ts
tests/: conftest.py  test_db.py
